--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   async: ^2.2.0
-  flutter_staggered_grid_view: 0.5.0
+  flutter_staggered_grid_view: 0.5.0-dev.1
 
 dev_dependencies:
   flutter_test:
